# streamlit_sess_i

./: README.md  pyproject.toml  setup.cfg
sess_i/: __init__.py
sess_i/base/: main.py
sess_i/gui/: gui_test.py  home.py
sess_i/gui/pages/: Page 1.py  page1.py
tests/: test_main.py
