[metadata]
name = sess_i
version = attr: sess_i.__version__
author = Loïc Le Grégam
author_email = legregam@insa-toulouse.fr
description =
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics